tests/ValidPrograms/Test17/test17.c
int a;

int main(){
	a=99;
	dummy();
	return a;
}

void dummy(){
	a=5;
}
