tests/SemanticError/Fonctions/Test9/DefiningTwoFunctions.c
void f(int a){
	return 2;
}

void f(int a){
	return a;
}
int main(){
	return 0;
}
